--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -43,10 +43,14 @@ body {
  * Sidebar
  */
 
-/* Hide for mobile, show later */
+/* Hide for mobile, show later
+**********MAYBE I WANT THIS, IDK
+*/
+/*
 .sidebar {
   display: none;
 }
+*/
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
